ログインしていない人も記事は登録できるようにする (#25)
* ログインしていない人も記事は登録できるようにする
Fixes #24

* noticeの表示がダブっているので削除

* ログイン制御を設定

* Devise画面をカスタマイズして無効化

* SSOログインボタンを修正

* 記事の登録はログインしなくても出来るようにする

* 記事に公開(秘密)フラグを追加

* secretをopenに変更

* ログインしている状態でなければ、公開フラグを編集出来なくする

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -1,7 +1,8 @@
 ja:
   activerecord:
     models:
-      user: ユーザー 
+      user: ユーザー
+      article: 記事
     attributes:
         user:
           id: ID
@@ -11,6 +12,11 @@ ja:
         user_strength:
           "no": "No"
           strength: 資質
+        article:
+          title: タイトル
+          content: コンテンツ
+          open: 公開
+          user: 作成者
   attributes:
     created_at: 作成日
     updated_at: 更新日
